<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>vslam</name>
	<version>1.0.0</version>
	<description>Examples of minimal publisher/subscriber using rclcpp</description>
	<maintainer email="phanthanhtung0701@gmail.com">Phan Thanh Tung</maintainer>
	<license>Apache License 2.0</license>
	<author> Phan Thanh Tung </author>

	<buildtool_depend>ament_cmake</buildtool_depend>
	
	<depend>rclcpp</depend>
	<depend>rclpy</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>cv_bridge</depend>
	<depend>message_filters</depend>
	<depend>image_transport</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_msgs</depend>

	
	<export>
    	<build_type>ament_cmake</build_type>
  	</export>
</package>
